server/compilers/goLiteJS/src/test/ml1/invalid/decl10.go
// no variable name
package main

var
